Update spring cloud dependencies. Used zipkin service. Created docker-compose.yml

--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk
 MAINTAINER Piotr Minkowski <piotr.minkowski@gmail.com>
 ADD target/account-service.jar account-service.jar
-ENTRYPOINT ["java", "-jar", "/account-service.jar"]
+#ENTRYPOINT ["java", "-XX:+PrintFlagsFinal", "$JAVA_OPTIONS", "-jar", "/account-service.jar"]
+CMD java -XX:+PrintFlagsFinal $JAVA_OPTIONS -jar /account-service.jar
 EXPOSE 2222
