--- a/discovery-service/Dockerfile
+++ b/discovery-service/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk
 MAINTAINER Piotr Minkowski <piotr.minkowski@gmail.com>
 ADD target/discovery-service.jar discovery-service.jar
-ENTRYPOINT ["java", "-jar", "/discovery-service.jar"]
-EXPOSE 8761
+#ENTRYPOINT ["java", "$JAVA_OPTIONS", "-jar", "/discovery-service.jar"]
+CMD java $JAVA_OPTIONS -jar /discovery-service.jar
+#EXPOSE 8761
