--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk
 MAINTAINER Piotr Minkowski <piotr.minkowski@gmail.com>
 ADD target/customer-service.jar customer-service.jar
-ENTRYPOINT ["java", "-jar", "/customer-service.jar"]
+#ENTRYPOINT ["java", "-XX:+PrintFlagsFinal", "$JAVA_OPTIONS", "-jar", "/customer-service.jar"]
+CMD java -XX:+PrintFlagsFinal $JAVA_OPTIONS -jar /customer-service.jar
 EXPOSE 3333
