--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: ${PORT:8765}
+
 info:
   component: Edge Server
   
@@ -26,11 +29,8 @@ ribbon:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery:8761/eureka/
     registerWithEureka: false
-      
-server:
-  port: 8765
 
 logging:
   level:
