--- a/zipkin-service/src/main/resources/application.yml
+++ b/zipkin-service/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:  
   port: ${PORT:9411}
+
+eureka:  
+  client:
+    serviceUrl:
+      defaultZone: ${DISCOVERY_URL:http://discovery:8761}/eureka/
+    registryFetchIntervalSeconds: 5
