--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,12 +137,12 @@ services:
       - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.2.2
+    image: docker.elastic.co/kibana/kibana-oss:6.2.2
     container_name: kibana
     cpu_percent: 50
-    mem_limit: 1.5g
-    environment: 
-      XPACK_SECURITY_ENABLED: "false"
+    mem_limit: 2g
+    #environment: 
+      #XPACK_SECURITY_ENABLED: "false"
     ports:
       - "5601:5601"
     networks:
