--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,15 @@
 input { 
-    tcp { 
-        port => 5000 codec => "json" 
+    rabbitmq {
+        host => "log-queue" 
+        port => 5672 
+        user => "rabbit" 
+        password => "carrot" 
+        durable => true
+        subscription_retry_interval_seconds => 5
+        queue => "q_logstash"
+        key => "microservices"
+        exchange => "logs"
+        exchange_type => "direct"
     } 
 } 
 output { 
