Testes com zipkin, sleuth, stream e rabbitmq

--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,10 @@
 spring:  
   application:
     name: account-service
-  zipkin:
-    baseUrl: "http://zipkin-service:9411"
+  #zipkin:
+  #  baseUrl: "http://zipkin-service:9411"
+  rabbitmq:
+    host: ${RABBIT_HOST:log-queue}
+    port: ${RABBIT_PORT:5672}
+    username: ${RABBIT_USERNAME:rabbit}
+    password: ${RABBIT_PASSWORD:carrot}
