--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -26,9 +26,17 @@
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 		<dependency>
+	       <groupId>org.springframework.cloud</groupId>
+	       <artifactId>spring-cloud-sleuth-stream</artifactId>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+	    </dependency>
+		<!-- dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
