--- a/zipkin-service/pom.xml
+++ b/zipkin-service/pom.xml
@@ -2,8 +2,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>pl.piomin</groupId>
-	<version>1.0-SNAPSHOT</version>
 	<artifactId>zipkin-service</artifactId>
 
 	<parent>
@@ -21,10 +19,23 @@
  			<groupId>org.springframework.cloud</groupId>
  			<artifactId>spring-cloud-starter-eureka</artifactId>
  		</dependency>
-		<dependency>
+ 		<dependency>
+ 			<groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-sleuth-zipkin-stream</artifactId>
+	   	</dependency>
+	   	<dependency>
+	       	<groupId>org.springframework.cloud</groupId>
+	       	<artifactId>spring-cloud-starter-sleuth</artifactId>
+	   	</dependency>
+	   <!-- EXAMPLE FOR RABBIT BINDING -->
+	   <dependency>
+	       <groupId>org.springframework.cloud</groupId>
+	       <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+	   </dependency>
+		<!--dependency>
 			<groupId>io.zipkin.java</groupId>
 			<artifactId>zipkin-server</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>io.zipkin.java</groupId>
 			<artifactId>zipkin-autoconfigure-ui</artifactId>
