--- a/zipkin-service/src/main/resources/bootstrap.yml
+++ b/zipkin-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: zipkin-service
+  rabbitmq:
+    host: ${RABBIT_HOST:log-queue}
+    port: ${RABBIT_PORT:5672}
+    username: ${RABBIT_USERNAME:rabbit}
+    password: ${RABBIT_PASSWORD:carrot} 
+
+  sleuth:
+    enabled: false
